[package]
name = "genuki"
version = "0.1.0"
authors = [ "Kevin Del Castillo <quebin31@gmail.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
anyhow = "1"
clap = "2"
infer = "0.1"
log = "0.4"
regex = "1"
serde = { version = "1", features = [ "derive" ] }
shells = "0.2"
thiserror = "1"
yaml = { package = "serde_yaml", version = "0.8" }
which = { version = "3", default-features = false }